# -Aegis-Moderation-Service

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.gpu  LICENSE  Makefile  README.md  SECURITY.md  constraints.cpu.txt  constraints.txt  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  full_logs.txt  heartbeat_service.py  main.py  model_warmup.py  monitor.json  pyproject.toml  queue_service.py  requirements.txt  run.txt  scratch.py  security.py  supabase_client.py  validate_models.py  worker.py
.github/: pull_request_template.md
api/: README.md
backend/: __init__.py  documents.py  image_io.py  logging_config.py  main.py  model_warmup.py  monitor.py  monitoring_routes.py  reports.py  validate_models.py  visibility.py
classifier/: README.md
core/: __init__.py
docker/: README.md
docs/: API.md  Architecture.md  Configuration.md  Deployment.md  Performance.md  ReleaseChecklist.md  Roadmap.md  Security.md
examples/: curl_examples.md  safe_text.json  unsafe_text.json
frontend/: app.js  dashboard.html  index.html  package-lock.json  package.json  styles.css
models/: __init__.py  registry.py
monitoring/: prometheus.yml
ocr/: README.md
ocr models trains/: .gitignore  ARCHITECTURE.md  FILES_MANIFEST.md  INDEX.md  INTEGRATION_GUIDE.md  MURIL_LOCAL_TRAINING.md  MURIL_QUICK_REFERENCE.md  README.md  examples_muril_integration.py  muril_local_train.py  promotional&non-propmotional_textdata.xlsx  requirements-muril-training.txt  test.py
pipeline/: __init__.py  batch_analyzer.py  category_engine.py  clip_engine.py  decision_engine.py  embedding_cache.py  gpu_scheduler.py  hard_block.py  hash_cache.py  nsfw.py  object_detector.py  ocr.py  online_calibration.py  pii_detector.py  safety_detector.py  safety_flags.py  surya_ocr.py  text_classifier.py  text_detector.py  text_moderation.py  text_safety.py  uncertainty.py  video_moderation.py  vlm_engine.py
postman/: Aegis-Moderation.postman_collection.json
rule_engine/: README.md
scripts/: benchmark.py  setup_models.py  warmup.py
tests/: test_accuracy_eval.py  test_api_health.py  test_child_safety.py  test_main.py  (+20 more)
(+64 files in other folders)
