[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-moderation"
version = "1.0.0"
description = "Standalone AI-powered image moderation platform with a browser dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aegis Moderation Contributors" }]
keywords = ["ai", "moderation", "fastapi", "ocr", "computer-vision", "huggingface"]

[tool.setuptools]
packages = ["backend", "pipeline", "models"]
py-modules = ["main", "model_warmup", "visibility", "validate_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_main.py", "test_standalone_report.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false